chore: resolve merge conflicts